--- a/divisio.html
+++ b/divisio.html
@@ -9,8 +9,8 @@
 	<body>
 		<p><b>DIVISIÓ DE 2 OPERANDS</b></p>
 		<form action="http://localhost/divisio.php" method="GET">
-			Operand 1: <input type="number" name="op1"><br>
-			Operand 2: <input type="number" name="op2"><br>
+			Operand 1: <input type="text" name="op1"><br>
+			Operand 2: <input type="text" name="op2"><br>
 			<input type="submit" value="Envia"/><input type="reset" value="Neteja"/>
 			<p><a href="index.html">Torna a l'inici</a></p>
 		</form>
